Fix github username and add link

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
 
 <div class="github">
     <img width="300" src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" /> <br>
-    http://github.com/betim
+    <a href="http://github.com/betim-app" target="_blank">http://github.com/betim-app</a>
 
     <br><br>
     <a href="http://paypal.me/betimapp">Donate us!</a>
