--- a/static/style.css
+++ b/static/style.css
@@ -106,6 +106,11 @@ h2 {
     border-top: 1px solid #313131;
 }
 
+.github a{
+    color: black;
+    text-decoration: none;
+}
+
 .meaning {
     background: #2b2b2b;
 }
